# STM32H5_HighCycleMem

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
src/: flash.c  flash.h  main.c
src/stm32/: startup_stm32h56x.S  stm32h563.h  stm32h56x_2M_boot.ld
